; ModuleID = '/home/carl/AnghaBench/kphp-kdb/image/extr_image-data.c_new_image.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/image/extr_image-data.c_new_image.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.stack_entry = type { i32, i32* }

@ft_image = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.stack_entry*, i32*)* @new_image to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @new_image(%struct.stack_entry* %0, i32* %1) #0 {
  %3 = alloca %struct.stack_entry*, align 8
  %4 = alloca i32*, align 8
  store %struct.stack_entry* %0, %struct.stack_entry** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load i32*, i32** %4, align 8
  %6 = load %struct.stack_entry*, %struct.stack_entry** %3, align 8
  %7 = getelementptr inbounds %struct.stack_entry, %struct.stack_entry* %6, i32 0, i32 1
  store i32* %5, i32** %7, align 8
  %8 = load i32, i32* @ft_image, align 4
  %9 = load %struct.stack_entry*, %struct.stack_entry** %3, align 8
  %10 = getelementptr inbounds %struct.stack_entry, %struct.stack_entry* %9, i32 0, i32 0
  store i32 %8, i32* %10, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
